Fix numeric wrap element display style - set to block

--- a/styles/kendo.common.css
+++ b/styles/kendo.common.css
@@ -1423,7 +1423,7 @@ div.k-dropdown
 
 .k-numeric-wrap
 {
-    display: inline-block;
+    display: block;
 }
 
 .k-calendar-container .k-header
